--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "elementar_api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -12,8 +13,10 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
     "@types/dotenv": "^8.2.0",
+    "@types/knex": "^0.16.1",
     "@types/node": "^16.7.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.3-alpha.4",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -32,7 +35,10 @@
   },
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir build --copy-files",
-    "dev": "ts-node-dev --transpile-only --inspect --ignore-watch node_modules -r tsconfig-paths/register src/shared/infra/http/server.ts"
+    "dev": "ts-node-dev --transpile-only --inspect --ignore-watch node_modules -r tsconfig-paths/register src/shared/infra/http/server.ts",
+    "knex:migrate:run": "knex --knexfile src/config/knexfile.ts migrate:latest",
+    "knex:migrate:rollback": "knex --knexfile src/config/knexfile.ts migrate:rollback",
+    "knex:seeds:run": "knex --knexfile src/config/knexfile.ts seed:run"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
@@ -41,8 +47,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "knex": "^0.95.11",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
-    "tsyringe": "^4.6.0"
+    "tsyringe": "^4.6.0",
+    "uuid": "^8.3.2"
   }
 }
